--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,48 +1,4 @@
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * The content below * * * * * * * * * * * -->
-<!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * -->
-<!-- * * * * * * * * * * and can be replaced.  * * * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * Delete the template below * * * * * * * * * -->
-<!-- * * * * * * * to get started with your project! * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<div
-  class="min-h-screen bg-gradient-to-br from-blue-400 to-purple-600 flex items-center justify-center p-8"
->
-  <div class="bg-white rounded-2xl shadow-2xl p-8 max-w-md w-full">
-    <h1 class="text-3xl font-bold text-gray-800 text-center mb-6">
-      🎉 Tailwind يعمل!
-    </h1>
-
-    <div class="space-y-4">
-      <div
-        class="p-4 bg-green-100 border border-green-400 text-green-700 rounded-lg"
-      >
-        ✅ تم تثبيت Tailwind بنجاح
-      </div>
-
-      <div
-        class="p-4 bg-blue-100 border border-blue-400 text-blue-700 rounded-lg"
-      >
-        🔥 جاهز للاستخدام مع Angular
-      </div>
-
-      <button
-        class="w-full bg-gradient-to-r from-blue-500 to-purple-600 text-white py-3 rounded-lg font-semibold hover:from-blue-600 hover:to-purple-700 transition-all duration-300"
-      >
-        زر تجريبي
-      </button>
-
-      <button
-        type="submit"
-        class="w-auto bg-slate-800 text-white py-3 rounded-lg px-8 font-semibold hover:bg-slate-900 transition-all duration-300"
-      >
-        blockquote
-      </button>
-    </div>
-  </div>
-</div>
-
+<app-products-list></app-products-list>
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content above * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * * -->
